--- a/docker/基础篇/06_本地镜像发布到私有库.md
+++ b/docker/基础篇/06_本地镜像发布到私有库.md
@@ -1,10 +1,10 @@
 # 本地镜像发布到私有库
 
-## 本地镜像发布到私有库流程
+## 1. 本地镜像发布到私有库流程
 
 ![image-20220112202402848](images/image-20220112202402848.png)
 
-## 是什么
+## 2. 是什么
 
 1 官方Docker Hub地址：https://hub.docker.com/，中国大陆访问太慢了且准备被阿里云取代的趋势，不太主流。
 
@@ -12,7 +12,7 @@
 
 Docker Registry是官方提供的工具，可以用于构建私有镜像仓库
 
-## 将本地镜像推送到私有库
+## 3. 将本地镜像推送到私有库
 
 1. 下载镜像Docker Registry
 
