--- a/jvm/docs/内存与垃圾回收/07_堆.md
+++ b/jvm/docs/内存与垃圾回收/07_堆.md
@@ -82,7 +82,7 @@ public class HeapSpaceInitial {
 - 在HotSpot中，Eden空间和另外两个Survivor空间缺省所占的比例是8:1:1。
 - 当然开发人员可通过`-XX:SurvivorRatio=8`调整这个空间比例。（需要显示设置）
   - `-XX:-UseAdaptiveSizePolicy`：关闭自适应的内存分配策略
-- **几乎所有的J**ava对象都是在Eden区内new出来的。
+- **几乎所有的**Java对象都是在Eden区内new出来的。
 - 绝大部分的Java对象的销毁都在新生代进行了。
 - 可以使用选项`-Xmn`新生代的空间大小。 （一般不设置）
 
@@ -240,7 +240,7 @@ JVM在进行GC时，并非每次都对上面三个内存（新生代、老年代
 
 随着JIT编译器的发展与逃逸分析技术逐渐成熟，**栈上分配、标量替换优化技术**将会导致一些微秒的变化，所有的对象都分配到堆上也逐渐变得不那么绝对了。
 
-**如果经过逃逸分析（Escape Analysis）后发现，一个对象并没有逃逸出方法的话，那么就可能被优化成栈上分配。**这样就无需在堆上分配内存，也无需进行垃圾回收了。这也是最常见的堆外存储技术。
+**如果经过逃逸分析（Escape Analysis）后发现，一个对象并没有逃逸出方法的话，那么就可能被优化成栈上分配**。这样就无需在堆上分配内存，也无需进行垃圾回收了。这也是最常见的堆外存储技术。
 
 基于OpenJDK深度定制的TaoBaoVM，其中创新的GCIH（GC invisible heap）技术实现off-heap，将生命周期较长的Java对象从heap中移至heap外，并且GC不能管理GCIH内部的Java对象，以此达到降低GC的回收频率和提升GC的回收效率的目的。
 
@@ -258,7 +258,7 @@ public static String method(String str) {
 }
 ```
 
-> 快速判断是否发生逃逸分析：看new的==对象实体==是否有可能在方法外被调用
+> 快速判断是否发生逃逸分析：看new的**对象实体**是否有可能在方法外被调用
 
 ```java
 /**
@@ -310,11 +310,11 @@ public class EscapeAnalysis {
 
 使用逃逸分析，编译器可以对代码做如下优化：
 
-- **栈上分配。**将堆分配转化为栈分配。如果一个对象在子程序中被分配，要使指向该对象的指针永远不会逃逸，对象可能是栈分配的候选，而不是堆分配。
+- **栈上分配**。将堆分配转化为栈分配。如果一个对象在子程序中被分配，要使指向该对象的指针永远不会逃逸，对象可能是栈分配的候选，而不是堆分配。
 
-- **同步省略。**如果一个对象被发现只能从一个线程被访问到，那么对于这个对象的操作可以不考虑同步。
+- **同步省略**。如果一个对象被发现只能从一个线程被访问到，那么对于这个对象的操作可以不考虑同步。
 
-- **标量替换或分离对象 。**有的对象可能不需要作为一个连续的内存结果存在也可以被访问到，那么对象的部分（或全部）可以不存在内存，而是存储在CPU寄存器中。
+- **标量替换或分离对象** 。有的对象可能不需要作为一个连续的内存结果存在也可以被访问到，那么对象的部分（或全部）可以不存在内存，而是存储在CPU寄存器中。
 
 #### 代码优化之栈上分配
 
@@ -374,7 +374,7 @@ public class StackAllocation {
 
 ![image-20211228132151849](images/image-20211228132151849.png)
 
-可以看到，Point这个聚合量经过逃逸分析后，发现他并没有逃逸，就被替换成两个聚合量了。那么标量替换有什么好处呢？就是可以大大减少堆内存的占用。因为一旦不需要创建对象了，那么就不再需要分配堆内存了。
+可以看到，Point这个聚合量经过逃逸分析后，发现他并没有逃逸，就被替换成两个标量了。那么标量替换有什么好处呢？就是可以大大减少堆内存的占用。因为一旦不需要创建对象了，那么就不再需要分配堆内存了。
 
 标量替换为栈上分配提供了很好的基础。
 
