--- a/jvm/docs/内存与垃圾回收/08_方法区.md
+++ b/jvm/docs/内存与垃圾回收/08_方法区.md
@@ -787,7 +787,7 @@ public class StaticObjTest {
 }
 ```
 
-==JDK7及其以后版本的HotSpot虚拟机选择把静态变量与类型在Java语言一段的映射Class对象存放在一起，存储在Java堆之中==
+**JDK7及其以后版本的HotSpot虚拟机选择把静态变量与类型在Java语言一段的映射Class对象存放在一起，存储在Java堆之中**
 
 ## 方法区的垃圾回收
 
@@ -812,42 +812,5 @@ public class StaticObjTest {
 ## 总结
 
 ![运行时数据区总结图](../images/运行时数据区总结图.png)
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
