--- a/jvm/docs/内存与垃圾回收/14_垃圾回收相关算法.md
+++ b/jvm/docs/内存与垃圾回收/14_垃圾回收相关算法.md
@@ -271,7 +271,7 @@ public class HeapOOM {
 
    老年代特点：区域较大，对象生命周期长、存活率高，回收不及年轻代频繁。
 
-  这种情况存在大量存活率高的对象，符合算法明显变得不合适。一般是由标记-清除或者是标记-整理的混合实现，
+  这种情况存在大量存活率高的对象，复制算法明显变得不合适。一般是由标记-清除或者是标记-整理的混合实现，
 
   - Mark阶段的开销与存活对象的数量成正比。
   - Sweep阶段的开销与所管理区域的大小成正相关。
