--- a/MyCat2/docs/第四章_搭建读写分离.md
+++ b/MyCat2/docs/第四章_搭建读写分离.md
@@ -92,8 +92,8 @@ show slave status\G;
 
 ```
 #下面两个参数都是Yes，则说明主从配置成功！
-# Slave_IO_Running: Yes
-# Slave_SQL_Running: Yes
+Slave_IO_Running: Yes
+Slave_SQL_Running: Yes
 ```
 
 #### 8. 主机新建库、新建表、insert 记录，从机复制  
@@ -101,6 +101,7 @@ show slave status\G;
 ```mysql
 #建库语句
 CREATE DATABASE mydb1;
+use mydb1;
 #建表语句
 CREATE TABLE mytbl(id INT,NAME VARCHAR(50));
 #插入数据
@@ -126,7 +127,7 @@ reset master;
 
 
 
-### 2、配置 Macat 读写分离  
+### 2、配置 Mycat 读写分离  
 
 登录Mycat，创建逻辑库，配置数据源  
 
@@ -134,7 +135,7 @@ reset master;
 #在Mycat里创建数据库mydb1
 #创建db2逻辑库
 create database mydb1;
-#修改mydb1.schema.json 指定数据源 "targetName": "prototype"，配置主机数据源
+#修改mydb1.schema.json 指定数据源 "targetName":"prototype"，配置主机数据源
 vim /usr/local/mycat/conf/schemas/mydb1.schema.json
 ```
 
@@ -142,16 +143,11 @@ vim /usr/local/mycat/conf/schemas/mydb1.schema.json
 
 使用注解方式添加数据源  
 
-```
-#登录Mycat，注解方式添加数据源，指向从机
-/*+ mycat:createDataSource{ "name":"rwSepw",
-"url":"jdbc:mysql://192.168.140.100:3306/mydb1?useSSL=false&characterEncodi
-ng=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root",
-"password":"123123" } */;
-/*+ mycat:createDataSource{ "name":"rwSepr",
-"url":"jdbc:mysql://192.168.140.99:3306/mydb1?useSSL=false&characterEncodin
-g=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root",
-"password":"123123" } */;
+```mysql
+/*+ mycat:createDataSource{ "name":"rwSepw","url":"jdbc:mysql://192.168.140.100:3306/mydb1?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"root" } */;
+
+/*+ mycat:createDataSource{ "name":"rwSepr","url":"jdbc:mysql://192.168.140.99:3306/mydb1?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"root" } */;
+
 #查询配置数据源结果
 /*+ mycat:showDataSources{} */;
 ```
@@ -160,15 +156,17 @@ g=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root",
 
 更新集群信息,添加dr0从节点.实现读写分离  
 
-```shell
+```mysql
 #更新集群信息,添加dr0从节点.
-/*!
-mycat:createCluster{"name":"prototype","masters":["rwSepw"],"replicas":["rw
-Sepr"]} */;
+/*!mycat:createCluster{"name":"prototype","masters":["rwSepw"],"replicas":["rwSepr"]} */;
+
 #查看配置集群信息
 /*+ mycat:showClusters{} */;
+```
+
+```shell
 #查看集群配置文件
-vim /usr/local/mycat/conf/clusters/prototype.cluster.json
+vim /usr/LOCAL/mycat/conf/clusters/prototype.cluster.json
 ```
 
 ![image-20220616182909665](images/image-20220616182909665.png)
@@ -177,14 +175,19 @@ vim /usr/local/mycat/conf/clusters/prototype.cluster.json
 readBalanceType
 查询负载均衡策略
 可选值:
+
 BALANCE_ALL(默认值)
 获取集群中所有数据源
+
 BALANCE_ALL_READ
 获取集群中允许读的数据源
+
 BALANCE_READ_WRITE
 获取集群中允许读写的数据源,但允许读的数据源优先
+
 BALANCE_NONE
 获取集群中允许写数据源,即主节点中选择
+
 switchType
 NOT_SWITCH:不进行主从切换
 SWITCH:进行主从切换
@@ -195,7 +198,7 @@ SWITCH:进行主从切换
 ### 4、验证读写分离  
 
 ```mysql
-（1）在写主机数据库表mytbl中插入带系统变量数据，造成主从数据不一致
+#（1）在写主机数据库表mytbl中插入带系统变量数据，造成主从数据不一致
 INSERT INTO mytbl VALUES(2,@@hostname);
 ```
 
@@ -362,8 +365,8 @@ show slave status\G;
 
 ```
 #下面两个参数都是Yes，则说明主从配置成功！
-# Slave_IO_Running: Yes
-# Slave_SQL_Running: Yes
+Slave_IO_Running: Yes
+Slave_SQL_Running: Yes
 ```
 
 #### 7. 两个主机互相复制  
@@ -400,8 +403,8 @@ Master1的复制Master2
 
 ```
 #下面两个参数都是Yes，则说明主从配置成功！
-# Slave_IO_Running: Yes
-# Slave_SQL_Running: Yes
+Slave_IO_Running: Yes
+Slave_SQL_Running: Yes
 ```
 
 #### 8. Master1 主机新建库、新建表、insert 记录，Master2 和从机复制  
@@ -427,23 +430,20 @@ reset master;
 
 Mycat2.0的特点把集群概念凸显了出来，和mysql主从复制、集群配合实现多节点读写分离  
 
+```mysql
+#（1） 双主双从集群角色划分
+#  *m1：主机
+#  *m2：备机，也负责读
+#  *s1，s2：从机
+#（2）增加两个数据源
+
+/*+ mycat:createDataSource{ "name":"rwSepw2","url":"jdbc:mysql://192.168.140.98:3306/mydb1?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"123123" } */;
+
+/*+ mycat:createDataSource{ "name":"rwSepr2","url":"jdbc:mysql://192.168.140.97:3306/mydb1?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"123123" } */;
+```
+
 ```json
-（1） 双主双从集群角色划分
-*m1：主机
-*m2：备机，也负责读
-*s1，s2：从机
-（3）增加两个数据源
-
-/*+ mycat:createDataSource{ "name":"rwSepw2",
-"url":"jdbc:mysql://192.168.140.98:3306/mydb1?useSSL=false&characterEncodin
-g=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root",
-"password":"123123" } */;
-/*+ mycat:createDataSource{ "name":"rwSepr2",
-"url":"jdbc:mysql://192.168.140.97:3306/mydb1?useSSL=false&characterEncodin
-g=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root",
-"password":"123123" } */;
-
-（2）修改集群配置文件
+（3）修改集群配置文件
 vim /usr/local/mycat/conf/clusters/prototype.cluster.json
 {
     "clusterType":"MASTER_SLAVE",
@@ -469,8 +469,11 @@ vim /usr/local/mycat/conf/clusters/prototype.cluster.json
         "timeUnit":"SECONDS"
     }
 }
+```
 
-（3）重启Mycat生效
+```sh
+#（4）重启Mycat生效
+./mycat restart
 ```
 
 
