--- a/MyCat2/docs/第四章_搭建读写分离.md
+++ b/MyCat2/docs/第四章_搭建读写分离.md
@@ -144,9 +144,10 @@ vim /usr/local/mycat/conf/schemas/mydb1.schema.json
 使用注解方式添加数据源  
 
 ```mysql
-/*+ mycat:createDataSource{ "name":"rwSepw","url":"jdbc:mysql://192.168.140.100:3306/mydb1?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"root" } */;
+/*+ mycat:createDataSource{ "name":"rwSepw","url":"jdbc:mysql://192.168.48.222:3306/atguigu_master_slave?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"root" } */;
 
-/*+ mycat:createDataSource{ "name":"rwSepr","url":"jdbc:mysql://192.168.140.99:3306/mydb1?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"root" } */;
+/*+ mycat:createDataSource{ "name":"rwSepr","url":"jdbc:mysql://192.168.48.20:3306/atguigu_master_slave?useSSL=false&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true", "user":"root","password":"root" } */;
+
 
 #查询配置数据源结果
 /*+ mycat:showDataSources{} */;
@@ -166,7 +167,7 @@ vim /usr/local/mycat/conf/schemas/mydb1.schema.json
 
 ```shell
 #查看集群配置文件
-vim /usr/LOCAL/mycat/conf/clusters/prototype.cluster.json
+vim /usr/local/mycat/conf/clusters/prototype.cluster.json
 ```
 
 ![image-20220616182909665](images/image-20220616182909665.png)
