--- a/mysql/高级篇/第15章_锁.md
+++ b/mysql/高级篇/第15章_锁.md
@@ -126,7 +126,7 @@
   SELECT...FOR SHARE；#（8.0新增语法）
   ```
 
-  在普通的SELECT语句后边加`LOCK IN SHAREMODE`，如果当前事务执行了该语句，那么它会为读取到的记录加`s锁`，这样允许别的事务继续获取这些记录的`S锁`（比方说别的事务也使用 `SELECT..LOCK IN SHARE MODE` 语句来读取这些记录），但是不能获取这些记录的`X锁`（比如使用 SELECT...FOR UPDATE语句来读取这些记录，或者直接修改这些记录）。如果别的事务想要获取这些记录的`x锁`，那么它们会阻塞，直到当前事务提交之后将这些记录上的`S锁`释放掉。
+  在普通的SELECT语句后边加`LOCK IN SHAREMODE`，如果当前事务执行了该语句，那么它会为读取到的记录加`s锁`，这样允许别的事务继续获取这些记录的`S锁`（比方说别的事务也使用 `SELECT..LOCK IN SHARE MODE` 语句来读取这些记录），但是不能获取这些记录的`X锁`（比如使用 `SELECT...FOR UPDATE`语句来读取这些记录，或者直接修改这些记录）。如果别的事务想要获取这些记录的`x锁`，那么它们会阻塞，直到当前事务提交之后将这些记录上的`S锁`释放掉。
 
 - 对读取的记录加`X锁`：
 
@@ -134,7 +134,7 @@
   SELECT ...FOR UPDATE;
   ```
 
-  在普通的SELECT语句后边加`FOR UPDATE`，如果当前事务执行了该语句，那么它会为读取到的记录加X锁，这样既不允许别的事务获取这些记录的`S锁`（比方说别的事务使用`SELECT..LOCK IN SHARE MOD`E语句来读取这些记录），也不允许获取这些记录的`x锁`（比如使用`SELECT...FOR UPDATE`语句来读取这些记录，或者直接修改这些记录）。如果别的事务想要获取这些记录的`S锁`或者`x锁`，那么它们会阻塞，直到当前事务提交之后将这些记录上的`X锁`释放掉。
+  在普通的SELECT语句后边加`FOR UPDATE`，如果当前事务执行了该语句，那么它会为读取到的记录加X锁，这样既不允许别的事务获取这些记录的`S锁`（比方说别的事务使用`SELECT..LOCK IN SHARE MODE`E语句来读取这些记录），也不允许获取这些记录的`x锁`（比如使用`SELECT...FOR UPDATE`语句来读取这些记录，或者直接修改这些记录）。如果别的事务想要获取这些记录的`S锁`或者`x锁`，那么它们会阻塞，直到当前事务提交之后将这些记录上的`X锁`释放掉。
 
 **MySQL8.0新特性：**
 
@@ -229,7 +229,7 @@ InnoDB 支持`多粒度锁（multiple granularity locking`），它允许`行级
 
 3、表明“某个事务正在某些行持有了锁或该事务准备去持有锁”
 
-意向锁分为两种：  n
+意向锁分为两种：  
 
 - **意向共享锁** （intention shared lock, IS）：事务有意向对表中的某些行加 **共享锁** （S锁）
 
@@ -760,7 +760,7 @@ Flush tables with read lock
 
 ```mysql
 #事务T1
-SELECT*FROM user LOCK IN SHARE MODE;
+SELECT * FROM user LOCK IN SHARE MODE;
 ```
 
 理论上创建多个`锁结构`没问题，但是如果一个事务要获取10000条记录的锁，生成10000个锁结构也太崩溃了！所以决定在对不同记录加锁时，如果符合下边这些条件的记录会放到一个`锁结构`中。
