--- a/mysql/高级篇/第16章_多版本并发控制.md
+++ b/mysql/高级篇/第16章_多版本并发控制.md
@@ -204,7 +204,7 @@ SELECT * FROM student WHERE id = 1 ; # 得到的列name的值为'张三'
 
 步骤2：从版本链中挑选可见的记录，从图中看出，最新版本的列`name`的内容是`‘王五’`，该版本的`trx_id`值为`10`，在`trx_ids`列表内，所以不符合可见性要求，根据`ro11_pointer`跳到下一个版本。
 
-步骤3：下一个版本的列`name`的内容是`‘李四’`，该版本的`trx_id`值也为`10`，也在`trxids`列表内，所以也不符合要求，继续跳到下一个版本。
+步骤3：下一个版本的列`name`的内容是`‘李四’`，该版本的`trx_id`值也为`10`，也在`trx_ids`列表内，所以也不符合要求，继续跳到下一个版本。
 
 步骤4：下一个版本的列`name`的内容是`张三`’，该版本的`trx_id`值为`8`，小于`ReadView`中的`up_limit_id`值`10`，所以这个版本是符合要求的，最后返回给用户的版本就是这条列name为‘张三’的记录。
 
@@ -375,7 +375,7 @@ SELECT * FROM student WHERE id = 1 ; # 得到的列name的值仍为'张三'
 select * from student where id >= 1;
 ```
 
-在开始查询之前，MySQL 会为事务 A 产生一个 ReadView，此时 ReadView 的内容如下：`trx_ids=[20,30]，up_limit_id=20，low_limit_id=31，creator_trx_id=20`。
+在开始查询之前，MySQL 会为事务 A 产生一个 ReadView，此时 ReadView 的内容如下：`trx_ids=[20,30]，up_limit_id=20，low_limit_id=31，creator_trx_id=0`。
 
 由于此时表 student 中只有一条数据，且符合 where id>=1 条件，因此会查询出来。然后根据 ReadView机制，发现该行数据的trx_id=10，小于事务 A 的 ReadView 里 up_limit_id，这表示这条数据是事务 A 开启之前，其他事务就已经提交了的数据，因此事务 A 可以读取到。
 
