--- a/mysql/高级篇/第18章_主从复制.md
+++ b/mysql/高级篇/第18章_主从复制.md
@@ -442,7 +442,7 @@ seconds_behind_master的计算方法是这样的：
 
 3 、大事务的执行
 
-一旦执行大事务，那么主库必须要等到事务完成之后才会写入binlog。
+> 一旦执行大事务，那么主库必须要等到事务完成之后才会写入binlog。
 
 **举例1**：一次性用delete语句删除太多数据
 
