更新图为相对路径

--- a/linux/安装和卸载.md
+++ b/linux/安装和卸载.md
@@ -6,13 +6,13 @@
 yum list installed | grep java
 ```
 
-![image-20220911010750602](D:\GitHub\doc\linux\images\image-20220911010750602.png)
+![image-20220911010750602](images\image-20220911010750602.png)
 
 ```sh
 rpm -e java-1.7.0-openjdk-headless.x86_64 java-1.7.0-openjdk.x86_64 java-1.8.0-openjdk-headless.x86_64 java-1.8.0-openjdk.x86_64 javapackages-tools.noarch python-javapackages.noarch tzdata-java.noarch --nodeps
 ```
 
-![image-20220911010855330](D:\GitHub\doc\linux\images\image-20220911010855330.png)
+![image-20220911010855330](images\image-20220911010855330.png)
 
 ## 安装外部JDK
 
